--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,16 +9,16 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@gfld/compositor": "0.0.1-alpha.60",
-    "@gfld/compositor-protocol": "0.0.1-alpha.60",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "@gfld/compositor": "^1.0.0-rc1",
+    "@gfld/compositor-protocol": "^1.0.0-rc1",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@types/react": "18.2.0",
-    "@types/react-dom": "18.2.0",
-    "@vitejs/plugin-react": "4.2.0",
-    "typescript": "5.3.0",
-    "vite": "5.0.0"
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "typescript": "^5.3.0",
+    "vite": "^5.0.0"
   }
 }
